fix images bottom white gap

--- a/css/style.css
+++ b/css/style.css
@@ -383,15 +383,16 @@ template {
 /* ============================================= */
 .container {
   justify-content: center;
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, min-content));
-  grid-template-rows: 200px;
+  grid-template-columns: repeat(auto-fit, 200px);
+  grid-auto-rows: 200px;
   gap: 1.5rem;
 }
 .container a {
   transition-duration: 0.6s;
+  transition-delay: 0.1s;
 }
 .container a:hover, .container a:focus {
   box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.2);
