--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -5,17 +5,19 @@
 .container {
   // Positioning
   justify-content: center;
-  padding-right: .5rem;
-  padding-left: .5rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
 
   // Display & Box Model
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, min-content));
-  grid-template-rows: 200px;
+  //grid-template-columns: repeat(auto-fit, minmax(200px, min-content));
+  grid-template-columns: repeat(auto-fit, 200px);
+  grid-auto-rows: 200px;
   gap: 1.5rem;
 
-  // Other
-  & a  {
-  @include img-effect();
+
+  // effects
+  & a {
+    @include img-effect();
   }
 }
